# jclab-license-v2

./: .gitmodules  CMakeLists.txt  build-proto.sh  go.mod  go.sum  verifier.go  verifier_test.go
.github/workflows/: java.yaml
include/jclab_license/: license_info.h  license_verifier.h  timecense.h
include/jclab_license/crypto/: provider.h
internal/jclabconstant/: jclab_license_authority.der
internal/util/: compress.go
java/: build.gradle.kts  settings.gradle.kts
java/buildSrc/src/main/kotlin/: Version.kt
java/buildSrc/src/main/kotlin/kr/jclab/gradlehelper/: ProcessHelper.kt
java/jclab-license-model/: build.gradle.kts
java/jclab-license-model/src/main/proto/: jclab-license.proto  jclab_license.proto
license_proto/: generator.go  jclab-license.pb.go  jclab_license.pb.go
scripts/: generate_cert_header.sh
src/: license_info.cc  license_verifier.cc  read_buffer_read_only.cc  read_buffer_read_only.h  timecense.cc
src/crypto/: crypto_provider.h
src/crypto/mbedtls/: mbedtls_provider.cc  mbedtls_provider.h
test/: CMakeLists.txt  main.cc
